# discord-voice-message-transcription-bot

./: .env.example  .gitignore  README.md  cdk.json  pyproject.toml  requirements.txt
cdk/: app.py  requirements.txt
cdk/stacks/: discord_bot_stack.py
